[project]
name = "bandit-multi-format"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Elazar", email = "elazarcoh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bandit-multi-format = "bandit_multi_format:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest>=9.0.0",
]

[project.entry-points."bandit.formatters"]
multi = "bandit_multi_format:formatter"
